fixed out of glove vector initialization and missing generate bigrams functions in fasttext implementation

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -262,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('the', 202790), (',', 192769), ('.', 165639), ('and', 109470), ('a', 109249), ('of', 100791), ('to', 93641), ('is', 76253), ('in', 61377), ('I', 54031), ('it', 53489), ('that', 49111), ('\"', 44667), (\"'s\", 43331), ('this', 42386), ('-', 36979), ('/><br', 35822), ('was', 35035), ('as', 30389), ('with', 29940)]\n"
+      "[('the', 202789), (',', 192769), ('.', 165632), ('and', 109469), ('a', 109242), ('of', 100791), ('to', 93641), ('is', 76253), ('in', 61374), ('I', 54030), ('it', 53487), ('that', 49111), ('\"', 44657), (\"'s\", 43331), ('this', 42385), ('-', 36979), ('/><br', 35822), ('was', 35035), ('as', 30388), ('with', 29940)]\n"
      ]
     }
    ],
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f177954ee18>, {'neg': 0, 'pos': 1})\n"
+      "defaultdict(<function _default_unk_index at 0x7f28a1bbfe18>, {'neg': 0, 'pos': 1})\n"
      ]
     }
    ],
@@ -654,11 +654,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.694 | Train Acc: 50.11% | Val. Loss: 0.696 | Val. Acc: 50.28% |\n",
-      "| Epoch: 02 | Train Loss: 0.693 | Train Acc: 49.83% | Val. Loss: 0.697 | Val. Acc: 51.00% |\n",
-      "| Epoch: 03 | Train Loss: 0.693 | Train Acc: 50.23% | Val. Loss: 0.697 | Val. Acc: 50.83% |\n",
-      "| Epoch: 04 | Train Loss: 0.693 | Train Acc: 49.94% | Val. Loss: 0.696 | Val. Acc: 49.97% |\n",
-      "| Epoch: 05 | Train Loss: 0.693 | Train Acc: 50.07% | Val. Loss: 0.697 | Val. Acc: 51.04% |\n"
+      "| Epoch: 01 | Train Loss: 0.694 | Train Acc: 50.12% | Val. Loss: 0.696 | Val. Acc: 50.17% |\n",
+      "| Epoch: 02 | Train Loss: 0.693 | Train Acc: 49.73% | Val. Loss: 0.696 | Val. Acc: 51.01% |\n",
+      "| Epoch: 03 | Train Loss: 0.693 | Train Acc: 50.22% | Val. Loss: 0.696 | Val. Acc: 50.87% |\n",
+      "| Epoch: 04 | Train Loss: 0.693 | Train Acc: 49.94% | Val. Loss: 0.696 | Val. Acc: 49.91% |\n",
+      "| Epoch: 05 | Train Loss: 0.693 | Train Acc: 50.07% | Val. Loss: 0.696 | Val. Acc: 51.00% |\n"
      ]
     }
    ],
@@ -691,7 +691,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.710 | Test Acc: 47.84% |\n"
+      "| Test Loss: 0.710 | Test Acc: 47.67% |\n"
      ]
     }
    ],
