--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -66,7 +66,9 @@
     "\n",
     "The theory is that these pre-trained vectors already have words with similar semantic meaning close together in vector space, e.g. \"terrible\", \"awful\", \"dreadful\" are nearby. This gives our embedding layer a good initialization as it does not have to learn these relations from scratch.\n",
     "\n",
-    "**Note**: these vectors are about 862MB, so watch out if you have a limited internet connection."
+    "**Note**: these vectors are about 862MB, so watch out if you have a limited internet connection.\n",
+    "\n",
+    "By default, TorchText will initialize words in your vocabulary but not in your pre-trained embeddings to zero. We don't want this, and instead initialize them randomly by setting `unk_init` to `torch.Tensor.normal_`. This will now initialize those words via a Gaussian distribution."
    ]
   },
   {
@@ -75,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\")\n",
+    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -271,13 +273,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.2647, -0.2753, -0.1325],\n",
+       "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
-       "        [-0.0038,  0.5892, -0.3353,  ...,  0.3862,  0.1623,  0.7502],\n",
-       "        [-0.4309, -0.1535,  0.5628,  ...,  0.1400,  0.2439,  0.0888],\n",
-       "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809]])"
+       "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809],\n",
+       "        [ 0.1885, -0.1690,  0.1530,  ..., -0.2077,  0.5473, -0.4517],\n",
+       "        [-0.1182, -0.4701, -0.0600,  ...,  0.7991, -0.0194,  0.4785]])"
       ]
      },
      "execution_count": 7,
@@ -460,11 +462,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.665 | Train Acc: 59.50% | Val. Loss: 0.634 | Val. Acc: 68.10% |\n",
-      "| Epoch: 02 | Train Loss: 0.588 | Train Acc: 69.04% | Val. Loss: 0.429 | Val. Acc: 81.64% |\n",
-      "| Epoch: 03 | Train Loss: 0.453 | Train Acc: 79.63% | Val. Loss: 0.476 | Val. Acc: 80.68% |\n",
-      "| Epoch: 04 | Train Loss: 0.390 | Train Acc: 83.45% | Val. Loss: 0.377 | Val. Acc: 84.55% |\n",
-      "| Epoch: 05 | Train Loss: 0.278 | Train Acc: 88.96% | Val. Loss: 0.320 | Val. Acc: 88.08% |\n"
+      "| Epoch: 01 | Train Loss: 0.669 | Train Acc: 58.61% | Val. Loss: 0.590 | Val. Acc: 70.80% |\n",
+      "| Epoch: 02 | Train Loss: 0.690 | Train Acc: 52.30% | Val. Loss: 0.691 | Val. Acc: 53.49% |\n",
+      "| Epoch: 03 | Train Loss: 0.682 | Train Acc: 55.89% | Val. Loss: 0.656 | Val. Acc: 62.46% |\n",
+      "| Epoch: 04 | Train Loss: 0.586 | Train Acc: 69.11% | Val. Loss: 0.419 | Val. Acc: 81.29% |\n",
+      "| Epoch: 05 | Train Loss: 0.365 | Train Acc: 84.93% | Val. Loss: 0.322 | Val. Acc: 86.78% |\n"
      ]
     }
    ],
@@ -495,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.350 | Test Acc: 86.48% |\n"
+      "| Test Loss: 0.327 | Test Acc: 86.65% |\n"
      ]
     }
    ],
@@ -557,7 +559,7 @@
     {
      "data": {
       "text/plain": [
-       "0.009576601907610893"
+       "0.026062507182359695"
       ]
      },
      "execution_count": 16,
@@ -584,7 +586,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9811310768127441"
+       "0.9745494723320007"
       ]
      },
      "execution_count": 17,
