--- a/3 - Faster Sentiment Analysis.ipynb
+++ b/3 - Faster Sentiment Analysis.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "['This', 'film', 'is', 'terrible', 'film is', 'This film', 'is terrible']"
+       "['This', 'film', 'is', 'terrible', 'is terrible', 'This film', 'film is']"
       ]
      },
      "execution_count": 2,
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\")\n",
+    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -246,13 +246,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.2647, -0.2753, -0.1325],\n",
+       "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [-0.6065, -0.1550,  0.4392,  ..., -0.2776, -0.4141,  0.9361],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]])"
+       "        [ 0.3199,  0.0746,  0.0231,  ..., -0.3609,  1.1303,  0.5668],\n",
+       "        [-1.0530, -1.0757,  0.3903,  ...,  0.0792, -0.3059,  1.9734],\n",
+       "        [-0.1734, -0.3195,  0.3694,  ..., -0.2435,  0.4767,  0.1151]])"
       ]
      },
      "execution_count": 9,
@@ -433,11 +433,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.688 | Train Acc: 56.85% | Val. Loss: 0.644 | Val. Acc: 71.34% |\n",
-      "| Epoch: 02 | Train Loss: 0.656 | Train Acc: 70.80% | Val. Loss: 0.523 | Val. Acc: 75.57% |\n",
-      "| Epoch: 03 | Train Loss: 0.585 | Train Acc: 79.04% | Val. Loss: 0.447 | Val. Acc: 79.60% |\n",
-      "| Epoch: 04 | Train Loss: 0.505 | Train Acc: 83.24% | Val. Loss: 0.423 | Val. Acc: 82.47% |\n",
-      "| Epoch: 05 | Train Loss: 0.439 | Train Acc: 85.92% | Val. Loss: 0.395 | Val. Acc: 85.01% |\n"
+      "| Epoch: 01 | Train Loss: 0.692 | Train Acc: 52.00% | Val. Loss: 0.674 | Val. Acc: 62.54% |\n",
+      "| Epoch: 02 | Train Loss: 0.684 | Train Acc: 57.78% | Val. Loss: 0.646 | Val. Acc: 68.23% |\n",
+      "| Epoch: 03 | Train Loss: 0.672 | Train Acc: 64.40% | Val. Loss: 0.599 | Val. Acc: 71.41% |\n",
+      "| Epoch: 04 | Train Loss: 0.650 | Train Acc: 70.25% | Val. Loss: 0.543 | Val. Acc: 74.33% |\n",
+      "| Epoch: 05 | Train Loss: 0.620 | Train Acc: 75.06% | Val. Loss: 0.496 | Val. Acc: 76.62% |\n"
      ]
     }
    ],
@@ -470,7 +470,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.387 | Test Acc: 85.16% |\n"
+      "| Test Loss: 0.496 | Test Acc: 76.19% |\n"
      ]
     }
    ],
@@ -486,7 +486,7 @@
    "source": [
     "## User Input\n",
     "\n",
-    "And as before, we can test on any input the user provides."
+    "And as before, we can test on any input the user provides making sure to generate bigrams from our tokenized sentence."
    ]
   },
   {
@@ -499,7 +499,7 @@
     "nlp = spacy.load('en')\n",
     "\n",
     "def predict_sentiment(sentence):\n",
-    "    tokenized = [tok.text for tok in nlp.tokenizer(sentence)]\n",
+    "    tokenized = generate_bigrams([tok.text for tok in nlp.tokenizer(sentence)])\n",
     "    indexed = [TEXT.vocab.stoi[t] for t in tokenized]\n",
     "    tensor = torch.LongTensor(indexed).to(device)\n",
     "    tensor = tensor.unsqueeze(1)\n",
@@ -522,7 +522,7 @@
     {
      "data": {
       "text/plain": [
-       "2.414077187040675e-07"
+       "0.03882138803601265"
       ]
      },
      "execution_count": 18,
@@ -549,7 +549,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "0.9998927116394043"
       ]
      },
      "execution_count": 19,
