--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\")\n",
+    "TEXT.build_vocab(train_data, max_size=25000, vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -301,13 +301,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.2647, -0.2753, -0.1325],\n",
+       "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
        "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
        "        ...,\n",
-       "        [-0.0038,  0.5892, -0.3353,  ...,  0.3862,  0.1623,  0.7502],\n",
-       "        [-0.4309, -0.1535,  0.5628,  ...,  0.1400,  0.2439,  0.0888],\n",
-       "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809]])"
+       "        [-0.0614, -0.0516, -0.6159,  ..., -0.0354,  0.0379, -0.1809],\n",
+       "        [ 0.1885, -0.1690,  0.1530,  ..., -0.2077,  0.5473, -0.4517],\n",
+       "        [-0.1182, -0.4701, -0.0600,  ...,  0.7991, -0.0194,  0.4785]])"
       ]
      },
      "execution_count": 7,
@@ -474,11 +474,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 0.494 | Train Acc: 74.95% | Val. Loss: 0.362 | Val. Acc: 84.11% |\n",
-      "| Epoch: 02 | Train Loss: 0.304 | Train Acc: 87.31% | Val. Loss: 0.291 | Val. Acc: 87.86% |\n",
-      "| Epoch: 03 | Train Loss: 0.219 | Train Acc: 91.29% | Val. Loss: 0.278 | Val. Acc: 88.49% |\n",
-      "| Epoch: 04 | Train Loss: 0.147 | Train Acc: 94.65% | Val. Loss: 0.290 | Val. Acc: 88.77% |\n",
-      "| Epoch: 05 | Train Loss: 0.088 | Train Acc: 97.25% | Val. Loss: 0.316 | Val. Acc: 88.61% |\n"
+      "| Epoch: 01 | Train Loss: 0.655 | Train Acc: 61.23% | Val. Loss: 0.507 | Val. Acc: 78.22% |\n",
+      "| Epoch: 02 | Train Loss: 0.427 | Train Acc: 80.56% | Val. Loss: 0.363 | Val. Acc: 84.41% |\n",
+      "| Epoch: 03 | Train Loss: 0.304 | Train Acc: 87.10% | Val. Loss: 0.351 | Val. Acc: 84.55% |\n",
+      "| Epoch: 04 | Train Loss: 0.219 | Train Acc: 91.28% | Val. Loss: 0.317 | Val. Acc: 86.89% |\n",
+      "| Epoch: 05 | Train Loss: 0.157 | Train Acc: 94.20% | Val. Loss: 0.339 | Val. Acc: 86.80% |\n"
      ]
     }
    ],
@@ -509,7 +509,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.330 | Test Acc: 87.60% |\n"
+      "| Test Loss: 0.365 | Test Acc: 85.13% |\n"
      ]
     }
    ],
@@ -565,7 +565,7 @@
     {
      "data": {
       "text/plain": [
-       "0.05760132521390915"
+       "0.09634540975093842"
       ]
      },
      "execution_count": 15,
@@ -592,7 +592,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9212645292282104"
+       "0.9790706634521484"
       ]
      },
      "execution_count": 16,
