--- a/5 - Multi-class Sentiment Analysis.ipynb
+++ b/5 - Multi-class Sentiment Analysis.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TEXT.build_vocab(train_data, vectors=\"glove.6B.100d\")\n",
+    "TEXT.build_vocab(train_data, vectors=\"glove.6B.100d\", unk_init=torch.Tensor.normal_)\n",
     "LABEL.build_vocab(train_data)"
    ]
   },
@@ -110,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f25b6be5e18>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
+      "defaultdict(<function _default_unk_index at 0x7f13f9713bf8>, {'HUM': 0, 'ENTY': 1, 'DESC': 2, 'NUM': 3, 'LOC': 4, 'ABBR': 5})\n"
      ]
     }
    ],
@@ -239,13 +239,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000],\n",
+       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.2647, -0.2753, -0.1325],\n",
+       "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
        "        [ 0.1638,  0.6046,  1.0789,  ..., -0.3140,  0.1844,  0.3624],\n",
        "        ...,\n",
        "        [-0.3110, -0.3398,  1.0308,  ...,  0.5317,  0.2836, -0.0640],\n",
        "        [ 0.0091,  0.2810,  0.7356,  ..., -0.7508,  0.8967, -0.7631],\n",
-       "        [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]])"
+       "        [ 0.4306,  1.2011,  0.0873,  ...,  0.8817,  0.3722,  0.3458]])"
       ]
      },
      "execution_count": 8,
@@ -408,11 +408,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Epoch: 01 | Train Loss: 1.475 | Train Acc: 41.20% | Val. Loss: 1.211 | Val. Acc: 57.82% |\n",
-      "| Epoch: 02 | Train Loss: 1.037 | Train Acc: 63.54% | Val. Loss: 0.865 | Val. Acc: 69.62% |\n",
-      "| Epoch: 03 | Train Loss: 0.703 | Train Acc: 77.10% | Val. Loss: 0.608 | Val. Acc: 79.60% |\n",
-      "| Epoch: 04 | Train Loss: 0.460 | Train Acc: 85.67% | Val. Loss: 0.484 | Val. Acc: 82.65% |\n",
-      "| Epoch: 05 | Train Loss: 0.301 | Train Acc: 91.20% | Val. Loss: 0.429 | Val. Acc: 84.56% |\n"
+      "| Epoch: 01 | Train Loss: 1.339 | Train Acc: 46.20% | Val. Loss: 0.999 | Val. Acc: 65.65% |\n",
+      "| Epoch: 02 | Train Loss: 0.882 | Train Acc: 68.22% | Val. Loss: 0.805 | Val. Acc: 72.43% |\n",
+      "| Epoch: 03 | Train Loss: 0.673 | Train Acc: 77.13% | Val. Loss: 0.713 | Val. Acc: 74.02% |\n",
+      "| Epoch: 04 | Train Loss: 0.515 | Train Acc: 83.03% | Val. Loss: 0.630 | Val. Acc: 77.01% |\n",
+      "| Epoch: 05 | Train Loss: 0.387 | Train Acc: 87.70% | Val. Loss: 0.624 | Val. Acc: 76.54% |\n"
      ]
     }
    ],
@@ -443,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Test Loss: 0.345 | Test Acc: 90.11% |\n"
+      "| Test Loss: 0.514 | Test Acc: 85.79% |\n"
      ]
     }
    ],
